# editor

./: Cargo.toml
assets/: style.toml
src/: bin.rs
src/views/: code.rs  mod.rs  test.rs
