[package]
name = "editor"
version = "0.1.0"
authors = ["c1020a12"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "editor"
path = "src/bin.rs"

[dependencies]
unicode-segmentation = "1.3.0"
unicode-width = "0.1.5"
log = "*"

[dependencies.cursive]
version = "0.14"
default-features = false
features = ["crossterm-backend"]
